   HBASE-6385  [0.90 branch] Backport HBASE-4195 to 0.90 (Posible inconsistency in a memstore read after a reseek, 
               possible performance improvement) (Gregory Chanan)
   HBASE-6392  UnknownRegionException blocks hbck from sideline big overlap regions
   HBASE-4470  ServerNotRunningException coming out of assignRootAndMeta kills the Master (Gregory Chanan)  

  IMPROVEMENT
   HBASE-5588  Deprecate/remove AssignmentManager#clearRegionFromTransition
   HBASE-5589  Add of the offline call to the Master Interface
   HBASE-5734  Change hbck sideline root (Jimmy Xiang)
   HBASE-5801  [hbck] Hbck should handle case where some regions have different HTD settings in .regioninfo files (0.90 specific) (Jimmy Xiang)
   HBASE-5712  Parallelize load of .regioninfo files in diagnostic/repair portion of hbck
   HBASE-3691  Add compressor support for 'snappy', google's compressor
   HBASE-5973  Add ability for potentially long-running IPC calls to abort if client disconnects (backport by David S. Wang)
   HBASE-6013  Polish sharp edges from CopyTable
   HBASE-5892  [hbck] Refactor parallel WorkItem* to Futures (Andrew Wang)
   HBASE-6173  hbck check specified tables only
   HBASE-5360  [uberhbck] Add options for how to handle offline split parents. 
   HBASE-6283  [region_mover.rb] Add option to exclude list of hosts on unload instead of just assuming the source node
   HBASE-6382  Upgrade Jersey to 1.8 to match Hadoop 1 and 2 (David S. Wang)
   HBASE-6379  [0.90 branch] Backport HBASE-6334 to 0.90 (TestImprovement for TestHRegion.testWritesWhileGetting) (Gregory Chanan)

  NEW FEATURE
   HBASE-5128  [uber hbck] Online automated repair of table integrity and region consistency problems
   HBASE-5599  [hbck] handle NO_VERSION_FILE and SHOULD_NOT_BE_DEPLOYED inconsistencies (fulin wang)
   HBASE-5719  Enhance hbck to sideline overlapped mega regions (Jimmy Xiang)

Release 0.90.6 - March 16, 2012
  INCOMPATIBLE CHANGES
   HBASE-5228  [REST] Rip out "transform" feature
